<resources>
    <string name="app_name">S7/唐通讯录导入</string>
    <string name="app_name_debug">S7电话DUG</string>
    <string name="readcontact">读取联系人数量：0人</string>
    <string name="savepath">完成后显示保存路径</string>
    <string name="btnStart">开始</string>
    <string name="btnFinish">退出</string>
    <string name="readBTName">读取到的蓝牙名字为：XX</string>
    <string name="tip">使用说明:\n1.读取完成后，找到手机存储中的“馋猫”文件夹，将其中的“GPS_BYD”复制到一张空白TF卡中（不是必须空白TF卡，里边可以有歌曲，视频等多媒体文件）！\n2.将TF卡插入S7/唐的MAP插槽，按“导航”键，提示同步完成后，长按音量旋纽重启中控！</string>
    <string name="tip_2">1.【车行五洲】是北京地区本着一起玩的开心、组团享受优惠的非盈利性的车友俱乐部 QQ群：498844718（暗号：馋猫，出来接客了）\n2.【乐途美化】致力于S7/唐的免费导航与美化　QQ群：531656847\n3.制作者——馋猫(QQ:18600839073)
        随时欢迎美女骚扰\n注：使用乐途的车友也可以按群上通讯录导入的方法进行操作，本软件和一机多图一样，免费使用，禁止盗版</string>
</resources>
